--- a/index.html
+++ b/index.html
@@ -104,13 +104,15 @@
           </div>
         </div>
     </div>
+    <div>
+     <footer>
+     Coded by
+     <a class="email" href="mailto: power.endah@gmail.com" target="blank">
+     <strong>Endah Power</strong>
+     </a>
+     </footer> 
+    </div>
     <script src="script.js">
     </script>  
   </body>
-  <footer>
-    Coded by
-    <a class="email" href="mailto: power.endah@gmail.com" target="blank">
-     <strong>Endah Power</strong>
-    </a>
-  </footer> 
 </html>
