--- a/index.html
+++ b/index.html
@@ -104,14 +104,18 @@
           </div>
         </div>
     </div>
-    <div>
      <footer>
      Coded by
      <a class="email" href="mailto: power.endah@gmail.com" target="blank">
      <strong>Endah Power</strong>
+     </a> 
+     and is open sourced on 
+     <a class="github-link" href= "https://github.com/endah-power/Weather-app" target="blank"> <strong>Github</strong>
+     </a>
+     and hosted on 
+     <a class="netlify-web" href="https://www.netlify.com/" target="blank"></a> <strong>Netlify</strong>
      </a>
      </footer> 
-    </div>
     <script src="script.js">
     </script>  
   </body>
