--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
      <strong>Endah Power</strong>
      </a> 
      and is open sourced on 
-     <a class="github-link" href= "https://github.com/endah-power/Weather-app" target="blank"> <strong>Github</strong>
+     <a class="github-link" href= "https://github.com/endah-power/Weather-app" target="blank"> 
+     <strong>Github</strong>
      </a>
      and hosted on 
-     <a class="netlify-web" href="https://www.netlify.com/" target="blank"></a> <strong>Netlify</strong>
+     <a class="netlify-web" href="https://www.netlify.com/" target="blank">
+     <strong>Netlify</strong>
      </a>
      </footer> 
     <script src="script.js">
