--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         <span><a class="unit" id="celsius">°C</a></span>  
       </h2>
     </div>
-      <p>High: <span class="high"></span>°</p>
-      <p>Low: <span class="low"></span>°</p>
+      <p>⇑: <span class="high"></span>° | ⇓: <span class="low"></span>°</p>
       <div class="container">
         <div class="row">
           <div class="col">
