Relevant icon from the API added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </p>
       <div class="row">
           <div class="col-6">
-            <img class="current-icon" src="images/cartoonsun-icon.png" alt="partly-cloudy" />  
+            <img class="current-icon" src="#" alt="partly-cloudy" />  
           </div>
           <div class="col-6">
               <div class="characteristics">
