--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
         <span class="current-temp">
          <strong></strong>
         </span>
-        <span><a class="unit" id="celsius">°C</a></span>  
+        <span><a href="#" class="unit" id="celsius">°C</a></span>  
+        <span class="line">|</span>
+        <span><a href="#" class="unit" id="fahrenheit">°F</a></span>  
       </h2>
     </div>
       <p>⇑: <span class="high"></span>°  ⇓: <span class="low"></span>°</p>
