--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </span>
         <span><a href="#" class="unit" id="celsius">°C</a></span>  
         <span class="line">|</span>
-        <span><a href="#" class="unit" id="fahrenheit">°F</a></span>  
+        <span><a href="#" class="unit" id="fahrenheit-convert">°F</a></span>  
       </h2>
     </div>
       <p>⇑: <span class="high"></span>°  ⇓: <span class="low"></span>°</p>
