--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
       <br />
       <h1></h1>
       <p class="current-day">
-        <br />
-        <p class="current-time">
+      <p class="current-time">
       </p>
       <div class="row">
           <div class="col-6">
@@ -65,7 +64,7 @@
         <span class="current-temp">
          <strong></strong>
         </span>
-        <span><a href="#" class="unit" id="celsius">°C</a></span>  
+        <span><a href="#" class="unit" id="celsius-convert">°C</a></span>  
         <span class="line">|</span>
         <span><a href="#" class="unit" id="fahrenheit-convert">°F</a></span>  
       </h2>
