style.css updated

--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
           </div>
       <div class="current-weather">
           </div>
-      <div class="temperature">
+      <div class="temp">
       <h2> 
         <span class="current-temp">
          <strong></strong>
         </span>
-        <span><a href="#" class="unit" id="celsius-convert">°C</a></span>  
-        <span class="line">|</span>
-        <span><a href="#" class="unit" id="fahrenheit-convert">°F</a></span>  
+        <span class="units">
+          <a href="#" id="celsius-convert">°C</a>|<a href="#" id="fahrenheit-convert">°F</a>
+        </span>  
       </h2>
-    </div>
+      </div>
       <p>⇑: <span class="high"></span>°  ⇓: <span class="low"></span>°</p>
       <div class="container">
         <div class="row">
