index, script, style updated

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
          <strong></strong>
         </span>
         <span class="units">
-          <a href="#" id="celsius-convert">°C</a>|<a href="#" id="fahrenheit-convert">°F</a>
+          <a href="#" id="celsius-convert" class="active">°C</a>|<a href="#" id="fahrenheit-convert">°F</a>
         </span>  
       </h2>
       </div>
